# KhongKhunTTS

./: .gitignore  CustomVits.py  README.md  compute_embeddings.py  compute_embeddings_wavLM.py  inference.ipynb  inference_with_speaker_id.ipynb  inference_zero_shot.ipynb  pyproject.toml  train_khongkhuntts.ipynb  train_khongkhuntts_exp2.ipynb  train_khongkhuntts_tsync2.ipynb  wavlm_speaker_manager.py
duration_predictor_augment/: generate_twin_dataset.ipynb
wavlm_module/: .gitignore
