[project]
name = "khongkhuntts"
version = "0.1.0"
description = "Thai Text-to-Speech based on YourTTS"
authors = [
    {name = "Thanat Wongsamut",email = "thanat.wongsamut@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.9,<3.12"
dependencies = [
    "tts (>=0.22.0,<0.23.0)",
    "trainer (>=0.0.36,<0.0.37)",
    "torch (>=2.5.1,<3.0.0)",
    "tensorboard (>=2.18.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.3.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false